Access control and secured navigation. Force login and have a valid session to enter the app