@@ -4,12 +4,13 @@ import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -19,21 +20,59 @@ import java.util.function.Function;
 
 @Component
 public class JwtService {
+    private static final String TEST_SECRET = "test-only-signing-key-012345678901";
+    private static final long DEFAULT_EXPIRATION_MILLIS = 30L * 60L * 60L * 1000L;
 
-    private final SecretKey signingKey = Keys.secretKeyFor(SignatureAlgorithm.HS256);
+    private final SecretKey signingKey;
+    private final long expirationMillis;
+
+    public JwtService() {
+        this(TEST_SECRET, DEFAULT_EXPIRATION_MILLIS, true);
+    }
+
+    public JwtService(String secret) {
+        this(secret, DEFAULT_EXPIRATION_MILLIS, true);
+    }
+
+    @Autowired
+    public JwtService(
+            @Value("${security.jwt.secret}") String secret,
+            @Value("${security.jwt.expiration-millis:108000000}") long expirationMillis) {
+        this(secret, expirationMillis, true);
+    }
+
+    private JwtService(String secret, long expirationMillis, boolean configured) {
+        if (secret == null || secret.getBytes(java.nio.charset.StandardCharsets.UTF_8).length < 32) {
+            throw new IllegalArgumentException("security.jwt.secret must contain at least 32 UTF-8 bytes");
+        }
+        if (expirationMillis <= 0) {
+            throw new IllegalArgumentException("security.jwt.expiration-millis must be positive");
+        }
+        this.signingKey = Keys.hmacShaKeyFor(secret.getBytes(java.nio.charset.StandardCharsets.UTF_8));
+        this.expirationMillis = expirationMillis;
+    }
 
     public String generateToken(String username) {
-        return generateToken(username, Collections.emptyList());
+        return generateToken(username, List.of(), List.of());
     }
 
     public String generateToken(String username, Collection<String> roleNames) {
+        return generateToken(username, roleNames,
+                RbacCatalog.permissionNames(roleNames));
+    }
+
+    public String generateToken(
+            String username,
+            Collection<String> roleNames,
+            Collection<String> permissionNames) {
         Map<String, Object> claims = new HashMap<>();
         String jti = UUID.randomUUID().toString();
         claims.put("jti", jti);
-        claims.put("roles", roleNames);
+        claims.put("roles", List.copyOf(roleNames));
+        claims.put("permissions", List.copyOf(permissionNames));
 
         long now = System.currentTimeMillis();
-        long expiryMillis = now + 60L * 60L * 1000L * 30L;
+        long expiryMillis = now + expirationMillis;
 
         return Jwts.builder()
                 .setSubject(username)
@@ -44,13 +83,12 @@ public class JwtService {
                 .compact();
     }
 
-    @SuppressWarnings("unchecked")
     public List<String> extractRoles(String token) {
-        Object roles = extractClaim(token, claims -> claims.get("roles"));
-        if (roles instanceof List<?> list) {
-            return (List<String>) list;
-        }
-        return Collections.emptyList();
+        return extractStringList(token, "roles");
+    }
+
+    public List<String> extractPermissions(String token) {
+        return extractStringList(token, "permissions");
     }
 
     public String extractJti(String token) {
@@ -63,7 +101,9 @@ public class JwtService {
 
     public boolean validateToken(String token, UserDetails userDetails) {
         String extractedUsername = extractUsername(token);
-        return extractedUsername.equals(userDetails.getUsername()) && !isTokenExpired(token);
+        return extractedUsername != null
+                && extractedUsername.equals(userDetails.getUsername())
+                && !isTokenExpired(token);
     }
 
     private boolean isTokenExpired(String token) {
@@ -85,5 +125,16 @@ public class JwtService {
                 .build()
                 .parseClaimsJws(token)
                 .getBody();
+    }
+
+    private List<String> extractStringList(String token, String claimName) {
+        Object values = extractClaim(token, claims -> claims.get(claimName));
+        if (!(values instanceof List<?> list)) {
+            return List.of();
+        }
+        return list.stream()
+                .filter(String.class::isInstance)
+                .map(String.class::cast)
+                .toList();
     }
 }
